# utb-cpp

ex1/: .clang-format  CMakeLists.txt
ex1/src/: main.cpp
